article and live

--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
 
       <!-- mobile footer fixed start  -->
 
-      <div class="mobile-footer-area d-lg-none">
+      <!-- <div class="mobile-footer-area d-lg-none">
         <div class="mobile-footer-wrap">
           <a href="./index.html" class="mobile-footer-items">
             <div class="item-icon">
@@ -799,7 +799,7 @@
             </div>
           </a>
         </div>
-      </div>
+      </div> -->
 
       <!-- mobile footer fixed end -->
     </div>
