single article & topics

--- a/article.html
+++ b/article.html
@@ -514,7 +514,78 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4"></div>
+              <div class="col-lg-4">
+                <div class="article-right-wrap">
+                  <div class="section-title">
+                    <h5>প্রধান খবর</h5>
+                  </div>
+                  <div class="article-right-links">
+                    <a href="#" class="other-article-link">
+                      <span
+                        >গণঅভ্যুত্থান থেকে বিএনপি যেভাবে বারবার লাভবান
+                        হয়েছে</span
+                      >
+                    </a>
+                    <a href="#" class="other-article-link">
+                      <span
+                        >গণঅভ্যুত্থান থেকে বিএনপি যেভাবে বারবার লাভবান
+                        হয়েছে</span
+                      >
+                      ১৪ সেপ্টেম্বর ২০২৪
+                    </a>
+                    <a href="#" class="other-article-link">
+                      <span
+                        >গণঅভ্যুত্থান থেকে বিএনপি যেভাবে বারবার লাভবান
+                        হয়েছে</span
+                      >
+                      ১৪ সেপ্টেম্বর ২০২৪
+                    </a>
+                  </div>
+                  <div class="section-title">
+                    <h5>নির্বাচিত খবর</h5>
+                  </div>
+                  <div class="article-right-links">
+                    <a href="#" class="card">
+                      <img
+                        src="./assets/img/other-images/article-1.webp"
+                        alt="article"
+                      />
+                      <div class="card-body">
+                        <span
+                          >গণঅভ্যুত্থান থেকে বিএনপি যেভাবে বারবার লাভবান
+                          হয়েছে</span
+                        >
+                      </div>
+                    </a>
+                    <a href="#" class="card">
+                      <img
+                        src="./assets/img/other-images/article-2.webp"
+                        alt="article"
+                      />
+                      <div class="card-body">
+                        <span
+                          >গণঅভ্যুত্থান থেকে বিএনপি যেভাবে বারবার লাভবান
+                          হয়েছে</span
+                        >
+                        ১৪ সেপ্টেম্বর ২০২৪
+                      </div>
+                    </a>
+                    <a href="#" class="card">
+                      <img
+                        src="./assets/img/other-images/article-3.webp"
+                        alt="article"
+                      />
+                      <div class="card-body">
+                        <span
+                          >গণঅভ্যুত্থান থেকে বিএনপি যেভাবে বারবার লাভবান
+                          হয়েছে</span
+                        >
+                        ১৪ সেপ্টেম্বর ২০২৪
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="row">
               <div class="col-12">
@@ -731,7 +802,7 @@
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/swiper.min.js"></script>
-    <script src="./assets/js/offer-countdown.js"></script>
+
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
