--- a/index.html
+++ b/index.html
@@ -29,15 +29,20 @@
   <body>
     <div id="content">
       <header class="header-area">
-        <div class="header-top d-lg-block d-none">
+        <div class="header-top">
           <div class="container">
             <div class="row">
-              <div class="col-12">
+              <div class="col-10">
                 <div class="header-logo">
                   <a href="./index.html">
                     <img src="./assets/img/logo/logo.png" alt="logo" />
                     <span class="text-uppercase">news</span> <span>বাংলা</span>
                   </a>
+                </div>
+              </div>
+              <div class="col-2 d-md-none">
+                <div class="toggle-icon">
+                  <i class="fa-solid fa-minus"></i>
                 </div>
               </div>
             </div>
@@ -46,16 +51,16 @@
         <div class="header-bottom">
           <div class="container">
             <div class="row align-items-center">
-              <div class="col-12 d-lg-block d-none">
+              <div class="col-12 d-md-block d-none">
                 <div class="main-menu">
                   <ul>
                     <li class="position-relative">
-                      <a href="./collection.html">
+                      <a href="./index.html">
                         <span>মূলপাতা </span>
                       </a>
                     </li>
                     <li class="position-relative">
-                      <a href="./collection.html">
+                      <a href="./topics.html">
                         <span>রাজনীতি </span>
                       </a>
                     </li>
@@ -90,7 +95,7 @@
                       </a>
                     </li>
                     <li class="position-relative">
-                      <a href="./collection.html">
+                      <a href="./topics-video.html">
                         <span>ভিডিও </span>
                       </a>
                     </li>
@@ -100,20 +105,20 @@
             </div>
           </div>
         </div>
-        <div class="mobile-menu d-lg-none">
+        <div class="mobile-menu d-md-none">
           <div class="mobile-logo">
-            <a href="#">
+            <a href="./index.html">
               <img src="./assets/img/logo/logo.png" alt="mobile_logo" />
             </a>
           </div>
           <ul class="mobile-main-menu">
             <li class="">
-              <a href="#">
+              <a href="./index.html">
                 <span>মূলপাতা </span>
               </a>
             </li>
             <li class="">
-              <a href="#">
+              <a href="./topics.html">
                 <span>রাজনীতি </span>
               </a>
             </li>
@@ -148,7 +153,7 @@
               </a>
             </li>
             <li class="">
-              <a href="#">
+              <a href="./topics-video.html">
                 <span>ভিডিও </span>
               </a>
             </li>
@@ -161,8 +166,8 @@
         <section class="news-area">
           <div class="container">
             <div class="row">
-              <div class="col-lg-6">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-6 col-md-8">
+                <a href="./article.html" class="news-wrap">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -183,9 +188,9 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-6 col-md-4">
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-lg-6">
                     <a href="#" class="news-wrap">
                       <div class="news-img">
                         <img src="./assets/img/blog/blog-1.webp" alt="news" />
@@ -199,7 +204,7 @@
                       </div>
                     </a>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-lg-6">
                     <a href="#" class="news-wrap">
                       <div class="news-img">
                         <img src="./assets/img/blog/blog-1.webp" alt="news" />
@@ -213,7 +218,7 @@
                       </div>
                     </a>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-lg-6 d-lg-block d-md-none">
                     <a href="#" class="news-wrap">
                       <div class="news-img">
                         <img src="./assets/img/blog/blog-1.webp" alt="news" />
@@ -227,7 +232,7 @@
                       </div>
                     </a>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-lg-6 d-lg-block d-md-none">
                     <a href="#" class="news-wrap">
                       <div class="news-img">
                         <img src="./assets/img/blog/blog-1.webp" alt="news" />
@@ -253,7 +258,7 @@
         <section class="news-area">
           <div class="container">
             <div class="row">
-              <div class="col-lg-3">
+              <div class="col-lg-3 col-md-6">
                 <a href="#" class="news-wrap">
                   <div class="news-content">
                     <h6 class="news-title">
@@ -264,7 +269,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-3 col-md-6">
                 <a href="#" class="news-wrap">
                   <div class="news-content">
                     <h6 class="news-title">
@@ -274,7 +279,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-3 col-md-6">
                 <a href="#" class="news-wrap">
                   <div class="news-content">
                     <h6 class="news-title">
@@ -285,7 +290,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-3 col-md-6">
                 <a href="#" class="news-wrap">
                   <div class="news-content">
                     <h6 class="news-title">
@@ -492,7 +497,7 @@
             </div>
             <div class="row">
               <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+                <a href="./single-article.html" class="news-wrap">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -510,7 +515,7 @@
                 </a>
               </div>
               <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+                <a href="./single-article.html" class="news-wrap">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -528,7 +533,7 @@
                 </a>
               </div>
               <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+                <a href="./single-article.html" class="news-wrap">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -546,7 +551,7 @@
                 </a>
               </div>
               <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+                <a href="./single-article.html" class="news-wrap">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
