--- a/article.html
+++ b/article.html
@@ -336,7 +336,7 @@
                           <h5>আরও পড়তে পারেন:</h5>
                         </div>
                       </div>
-                      <div class="col-lg-4 col-md-6">
+                      <div class="col-md-4">
                         <a href="#" class="other-article-link">
                           <span
                             >গণঅভ্যুত্থান থেকে বিএনপি যেভাবে বারবার লাভবান
@@ -345,7 +345,7 @@
                           ১৪ সেপ্টেম্বর ২০২৪
                         </a>
                       </div>
-                      <div class="col-lg-4 col-md-6">
+                      <div class="col-md-4">
                         <a href="#" class="other-article-link">
                           <span
                             >গণঅভ্যুত্থান থেকে বিএনপি যেভাবে বারবার লাভবান
@@ -354,7 +354,7 @@
                           ১৪ সেপ্টেম্বর ২০২৪
                         </a>
                       </div>
-                      <div class="col-lg-4 col-md-6">
+                      <div class="col-md-4">
                         <a href="#" class="other-article-link">
                           <span
                             >গণঅভ্যুত্থান থেকে বিএনপি যেভাবে বারবার লাভবান
@@ -449,7 +449,7 @@
                           <h5>আরও পড়তে পারেন:</h5>
                         </div>
                       </div>
-                      <div class="col-lg-4 col-md-6">
+                      <div class="col-md-4">
                         <a href="#" class="other-article-link">
                           <span
                             >গণঅভ্যুত্থান থেকে বিএনপি যেভাবে বারবার লাভবান
@@ -458,7 +458,7 @@
                           ১৪ সেপ্টেম্বর ২০২৪
                         </a>
                       </div>
-                      <div class="col-lg-4 col-md-6">
+                      <div class="col-md-4">
                         <a href="#" class="other-article-link">
                           <span
                             >গণঅভ্যুত্থান থেকে বিএনপি যেভাবে বারবার লাভবান
@@ -467,7 +467,7 @@
                           ১৪ সেপ্টেম্বর ২০২৪
                         </a>
                       </div>
-                      <div class="col-lg-4 col-md-6">
+                      <div class="col-md-4">
                         <a href="#" class="other-article-link">
                           <span
                             >গণঅভ্যুত্থান থেকে বিএনপি যেভাবে বারবার লাভবান
@@ -593,7 +593,7 @@
                   <h5>সর্বাধিক পঠিত</h5>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-6">
+              <div class="col-xl-3 col-md-6">
                 <a href="#" class="news-text-wrap">
                   <h2 class="news-count">১</h2>
                   <h6 class="news-headline">
@@ -601,7 +601,7 @@
                   </h6>
                 </a>
               </div>
-              <div class="col-lg-3 col-md-6">
+              <div class="col-xl-3 col-md-6">
                 <a href="#" class="news-text-wrap">
                   <h2 class="news-count">২</h2>
                   <h6 class="news-headline">
@@ -610,7 +610,7 @@
                   </h6>
                 </a>
               </div>
-              <div class="col-lg-3 col-md-6">
+              <div class="col-xl-3 col-md-6">
                 <a href="#" class="news-text-wrap">
                   <h2 class="news-count">৩</h2>
                   <h6 class="news-headline">
@@ -619,7 +619,7 @@
                   </h6>
                 </a>
               </div>
-              <div class="col-lg-3 col-md-6">
+              <div class="col-xl-3 col-md-6">
                 <a href="#" class="news-text-wrap">
                   <h2 class="news-count">৪</h2>
                   <h6 class="news-headline">
@@ -628,7 +628,7 @@
                   </h6>
                 </a>
               </div>
-              <div class="col-lg-3 col-md-6">
+              <div class="col-xl-3 col-md-6">
                 <a href="#" class="news-text-wrap">
                   <h2 class="news-count">৫</h2>
                   <h6 class="news-headline">
@@ -637,7 +637,7 @@
                   </h6>
                 </a>
               </div>
-              <div class="col-lg-3 col-md-6">
+              <div class="col-xl-3 col-md-6">
                 <a href="#" class="news-text-wrap">
                   <h2 class="news-count">৬</h2>
                   <h6 class="news-headline">
