--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <div class="col-lg-6 col-md-4">
                 <div class="row">
                   <div class="col-lg-6">
-                    <a href="#" class="news-wrap">
+                    <a href="#" class="news-wrap sub-news">
                       <div class="news-img">
                         <img src="./assets/img/blog/blog-1.webp" alt="news" />
                       </div>
@@ -205,7 +205,7 @@
                     </a>
                   </div>
                   <div class="col-lg-6">
-                    <a href="#" class="news-wrap">
+                    <a href="#" class="news-wrap sub-news">
                       <div class="news-img">
                         <img src="./assets/img/blog/blog-1.webp" alt="news" />
                       </div>
@@ -219,7 +219,7 @@
                     </a>
                   </div>
                   <div class="col-lg-6 d-lg-block d-md-none">
-                    <a href="#" class="news-wrap">
+                    <a href="#" class="news-wrap sub-news">
                       <div class="news-img">
                         <img src="./assets/img/blog/blog-1.webp" alt="news" />
                       </div>
@@ -233,7 +233,7 @@
                     </a>
                   </div>
                   <div class="col-lg-6 d-lg-block d-md-none">
-                    <a href="#" class="news-wrap">
+                    <a href="#" class="news-wrap sub-news">
                       <div class="news-img">
                         <img src="./assets/img/blog/blog-1.webp" alt="news" />
                       </div>
@@ -342,7 +342,7 @@
               <div class="col-lg-6">
                 <div class="row">
                   <div class="col-md-6">
-                    <a href="#" class="news-wrap">
+                    <a href="#" class="news-wrap sub-news">
                       <div class="news-img">
                         <img src="./assets/img/blog/blog-1.webp" alt="news" />
                       </div>
@@ -356,7 +356,7 @@
                     </a>
                   </div>
                   <div class="col-md-6">
-                    <a href="#" class="news-wrap">
+                    <a href="#" class="news-wrap sub-news">
                       <div class="news-img">
                         <img src="./assets/img/blog/blog-1.webp" alt="news" />
                       </div>
@@ -370,7 +370,7 @@
                     </a>
                   </div>
                   <div class="col-md-6">
-                    <a href="#" class="news-wrap">
+                    <a href="#" class="news-wrap sub-news">
                       <div class="news-img">
                         <img src="./assets/img/blog/blog-1.webp" alt="news" />
                       </div>
@@ -384,7 +384,7 @@
                     </a>
                   </div>
                   <div class="col-md-6">
-                    <a href="#" class="news-wrap">
+                    <a href="#" class="news-wrap sub-news">
                       <div class="news-img">
                         <img src="./assets/img/blog/blog-1.webp" alt="news" />
                       </div>
@@ -419,8 +419,8 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -433,8 +433,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -447,8 +447,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -461,8 +461,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -496,8 +496,8 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-3">
-                <a href="./single-article.html" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="./single-article.html" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -514,8 +514,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="./single-article.html" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="./single-article.html" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -532,8 +532,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="./single-article.html" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="./single-article.html" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -550,8 +550,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="./single-article.html" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="./single-article.html" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -579,7 +579,14 @@
         <section class="news-area">
           <div class="container">
             <div class="row">
-              <div class="col-lg-6">
+              <div class="row">
+                <div class="col-12">
+                  <div class="section-title">
+                    <h5>সর্বাধিক পঠিত</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
                 <a href="#" class="news-text-wrap">
                   <h2 class="news-count">১</h2>
                   <h6 class="news-headline">
@@ -587,7 +594,7 @@
                   </h6>
                 </a>
               </div>
-              <div class="col-lg-6">
+              <div class="col-md-6">
                 <a href="#" class="news-text-wrap">
                   <h2 class="news-count">২</h2>
                   <h6 class="news-headline">
@@ -596,7 +603,7 @@
                   </h6>
                 </a>
               </div>
-              <div class="col-lg-6">
+              <div class="col-md-6">
                 <a href="#" class="news-text-wrap">
                   <h2 class="news-count">৩</h2>
                   <h6 class="news-headline">
@@ -605,7 +612,7 @@
                   </h6>
                 </a>
               </div>
-              <div class="col-lg-6">
+              <div class="col-md-6">
                 <a href="#" class="news-text-wrap">
                   <h2 class="news-count">৪</h2>
                   <h6 class="news-headline">
@@ -614,7 +621,7 @@
                   </h6>
                 </a>
               </div>
-              <div class="col-lg-6">
+              <div class="col-md-6">
                 <a href="#" class="news-text-wrap">
                   <h2 class="news-count">৫</h2>
                   <h6 class="news-headline">
@@ -623,7 +630,7 @@
                   </h6>
                 </a>
               </div>
-              <div class="col-lg-6">
+              <div class="col-md-6">
                 <a href="#" class="news-text-wrap">
                   <h2 class="news-count">৬</h2>
                   <h6 class="news-headline">
@@ -642,7 +649,7 @@
         <section class="cto-area">
           <div class="container">
             <div class="row align-items-end">
-              <div class="col-lg-6">
+              <div class="col-md-6">
                 <div class="cto-wrap">
                   <h3 class="cto-title">অন্যান্য ভাষায় সংবাদ দেখুন</h3>
                   <a href="#" class="cto-btn">
@@ -651,7 +658,7 @@
                   </a>
                 </div>
               </div>
-              <div class="col-lg-6 text-end">
+              <div class="col-md-6 text-end">
                 <div class="cto-img">
                   <img src="./assets/img/other-images/cto.webp" alt="cto" />
                 </div>
@@ -692,8 +699,8 @@
           <hr />
         </div>
         <div class="container">
-          <div class="row">
-            <div class="col-lg-3">
+          <div class="row d-md-flex d-none">
+            <div class="col-lg-3 col-md-4">
               <div class="footer-widget">
                 <ul>
                   <li>
@@ -705,7 +712,7 @@
                 </ul>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-4">
               <div class="footer-widget">
                 <ul>
                   <li>
@@ -717,7 +724,7 @@
                 </ul>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-4">
               <div class="footer-widget">
                 <ul>
                   <li>
@@ -725,6 +732,38 @@
                   </li>
                   <li>
                     <a href="#"><span> Do not share or sell my info</span> </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="row d-md-none">
+            <div class="col-5">
+              <div class="footer-widget">
+                <ul>
+                  <li>
+                    <a href="#"> <span>ব্যবহারের শর্তাবলী</span> </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span>বিবিসি সম্পর্কে</span> </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span>প্রিভেসি নীতি</span> </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-7">
+              <div class="footer-widget">
+                <ul>
+                  <li>
+                    <a href="#"> <span>কুকিজ</span> </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span>বিবিসির সাথে যোগাযোগ করুন</span> </a>
+                  </li>
+                  <li>
+                    <a href="#"> <span>Do not share or sell my info</span> </a>
                   </li>
                 </ul>
               </div>
@@ -745,68 +784,6 @@
           </div>
         </div>
       </footer>
-      <!-- footer area end -->
-
-      <!-- mobile footer fixed start  -->
-
-      <!-- <div class="mobile-footer-area d-lg-none">
-        <div class="mobile-footer-wrap">
-          <a href="./index.html" class="mobile-footer-items">
-            <div class="item-icon">
-              <i class="fa fa-home"></i>
-            </div>
-            <div class="item-text">
-              <h6>Home</h6>
-            </div>
-          </a>
-          <a href="./wishlist.html" class="mobile-footer-items">
-            <div class="item-icon">
-              <i class="fa fa-heart"></i>
-            </div>
-            <div class="item-text">
-              <h6>Wishlist</h6>
-            </div>
-          </a>
-          <a
-            href="javascript:void(0)"
-            type="button"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#cartProdcut"
-            aria-controls="cartProdcut"
-            class="mobile-footer-items"
-          >
-            <div class="item-icon">
-              <i class="fa fa-cart-shopping"></i>
-            </div>
-            <div class="item-text">
-              <h6>Cart</h6>
-            </div>
-          </a>
-          <a
-            data-bs-toggle="modal"
-            href="#compareModal"
-            role="button"
-            class="mobile-footer-items"
-          >
-            <div class="item-icon">
-              <i class="fa-solid fa-arrow-right-arrow-left"></i>
-            </div>
-            <div class="item-text">
-              <h6>Compare</h6>
-            </div>
-          </a>
-          <a href="./account.html" class="mobile-footer-items">
-            <div class="item-icon">
-              <i class="fa fa-user"></i>
-            </div>
-            <div class="item-text">
-              <h6>Account</h6>
-            </div>
-          </a>
-        </div>
-      </div> -->
-
-      <!-- mobile footer fixed end -->
     </div>
     <!-- all script  -->
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
