--- a/single-article.html
+++ b/single-article.html
@@ -29,15 +29,20 @@
   <body>
     <div id="content">
       <header class="header-area">
-        <div class="header-top d-lg-block d-none">
+        <div class="header-top">
           <div class="container">
             <div class="row">
-              <div class="col-12">
+              <div class="col-10">
                 <div class="header-logo">
                   <a href="./index.html">
                     <img src="./assets/img/logo/logo.png" alt="logo" />
                     <span class="text-uppercase">news</span> <span>বাংলা</span>
                   </a>
+                </div>
+              </div>
+              <div class="col-2 d-md-none">
+                <div class="toggle-icon">
+                  <i class="fa-solid fa-minus"></i>
                 </div>
               </div>
             </div>
@@ -46,16 +51,16 @@
         <div class="header-bottom">
           <div class="container">
             <div class="row align-items-center">
-              <div class="col-12 d-lg-block d-none">
+              <div class="col-12 d-md-block d-none">
                 <div class="main-menu">
                   <ul>
                     <li class="position-relative">
-                      <a href="./collection.html">
+                      <a href="./index.html">
                         <span>মূলপাতা </span>
                       </a>
                     </li>
                     <li class="position-relative">
-                      <a href="./collection.html">
+                      <a href="./topics.html">
                         <span>রাজনীতি </span>
                       </a>
                     </li>
@@ -90,7 +95,7 @@
                       </a>
                     </li>
                     <li class="position-relative">
-                      <a href="./collection.html">
+                      <a href="./topics-video.html">
                         <span>ভিডিও </span>
                       </a>
                     </li>
@@ -100,20 +105,20 @@
             </div>
           </div>
         </div>
-        <div class="mobile-menu d-lg-none">
+        <div class="mobile-menu d-md-none">
           <div class="mobile-logo">
-            <a href="#">
+            <a href="./index.html">
               <img src="./assets/img/logo/logo.png" alt="mobile_logo" />
             </a>
           </div>
           <ul class="mobile-main-menu">
             <li class="">
-              <a href="#">
+              <a href="./index.html">
                 <span>মূলপাতা </span>
               </a>
             </li>
             <li class="">
-              <a href="#">
+              <a href="./topics.html">
                 <span>রাজনীতি </span>
               </a>
             </li>
@@ -148,7 +153,7 @@
               </a>
             </li>
             <li class="">
-              <a href="#">
+              <a href="./topics-video.html">
                 <span>ভিডিও </span>
               </a>
             </li>
