--- a/topics-video.html
+++ b/topics-video.html
@@ -169,8 +169,8 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -187,8 +187,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -205,8 +205,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -223,8 +223,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -241,8 +241,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -259,8 +259,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -277,8 +277,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -295,8 +295,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -313,8 +313,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -331,8 +331,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -349,8 +349,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -367,8 +367,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -385,8 +385,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -403,8 +403,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -421,8 +421,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
@@ -439,8 +439,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img with-video">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                     <div class="video-item">
