--- a/topics.html
+++ b/topics.html
@@ -169,8 +169,8 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -183,8 +183,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -197,8 +197,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -211,8 +211,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -225,8 +225,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -239,8 +239,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -253,8 +253,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -267,8 +267,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -281,8 +281,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -295,8 +295,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -309,8 +309,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -323,8 +323,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -337,8 +337,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -351,8 +351,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -365,8 +365,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
@@ -379,8 +379,8 @@
                   </div>
                 </a>
               </div>
-              <div class="col-lg-3">
-                <a href="#" class="news-wrap">
+              <div class="col-lg-3 col-md-6">
+                <a href="#" class="news-wrap sub-news">
                   <div class="news-img">
                     <img src="./assets/img/blog/blog-1.webp" alt="news" />
                   </div>
